Bug 1714224 - Cancel sync timeout timer after mFlagSyncLooping is set to false, r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D118350